jukebox/jukebox_Deployment_jukebox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jukebox
spec:
  replicas: 1
  selector:
    matchLabels:
      transpire.ocf.io/deployment: jukebox
  template:
    metadata:
      labels:
        transpire.ocf.io/deployment: jukebox
    spec:
      containers:
      - args:
        - -mpdhost
        - tv.ocf.berkeley.edu
        - -host
        - 0.0.0.0
        image: ghcr.io/ocf/jukebox:a1dc44548ea2ae77f6505e55418dd98b4c293f8b
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 8080
