jukebox/jukebox_Service_jukebox.yaml
apiVersion: v1
kind: Service
metadata:
  name: jukebox
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    transpire.ocf.io/deployment: jukebox
