jukebox/jukebox_Ingress_jukebox.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: jukebox
spec:
  ingressClassName: contour
  rules:
  - host: jukebox.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: jukebox
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jukebox.ocf.berkeley.edu
    secretName: jukebox-tls
